[package]
name = "raspOS"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]


[[bin]]
name = "kernel"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Optional dependencies
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }

